--- a/pass.html
+++ b/pass.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         
-        <h1>Pass phrase by Pranay bhargav Reddy Bakaram</h1>
+        <h1>Pass phrase by Pranay Bhargav Reddy Bakaram</h1>
 
         <form>
             <label for="form1_age">Enter the secret phrase </label>
