--- a/arithmetic.html
+++ b/arithmetic.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>
         Arithmetic Operations
     </title>
@@ -11,7 +15,10 @@
 <body>
 
     <h2>Computes Pranay Bhargav Reddy Bakaram </h2>
-    <form>
+    <br>
+    <br>
+    
+    <form class="col-6">
         <div class="form-group" style="width: 30%;">
             <label for="form1_base" class="from-lable">Enter a base</label>
             <input type="number" class="form-control" id="baseId" name="form1_base" value=10>
@@ -20,13 +27,13 @@
             <label for="form1_exponent" class="from-lable">Enter an exponent </label>
             <input type="text" class="form-control" id="exponentId" name="form1_exponent" value=2>
         </div>
-        <input type="button" onclick="powers()" value="Compute">
+        <input type="button" onclick="powers()" value="Compute" class="btn btn-primary">
     </form>
-
-
-    <p id="result">This text will be replaced </p>
     <br><br>
-    <form>
+
+    <p id="result"  style="color:tomato;">This text will be replaced </p>
+    <br><br>
+    <form class="col-6">
         <div class="form-check">
             <input type="radio" id="radiogrp_plus" name="operators" value="plus" onclick="processRadio()">
             <label for="rg1_plus" class="form-check-label">+</label>
@@ -48,7 +55,7 @@
         </div>
         <br>
         <br>
-        <p id="aValues">This text will be replaced </p>
+        <p id="aValues" style="color: black;">This text will be replaced </p>
         <br>
 
         <script>
